--- a/genindex.html
+++ b/genindex.html
@@ -351,6 +351,8 @@
         </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="services.html#services.worker.DatabaseWorker.apply_filter">apply_filter() (services.worker.DatabaseWorker method)</a>
+</li>
         <li><a href="core.html#core.theme_manager.ThemeManager.apply_theme">apply_theme() (core.theme_manager.ThemeManager method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.assign_tag_to_entity">assign_tag_to_entity() (services.db_service.DatabaseService method)</a>
@@ -672,6 +674,10 @@
   <h2>F</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="services.html#services.db_service.DatabaseService.filter_ids_by_tags">filter_ids_by_tags() (services.db_service.DatabaseService method)</a>
+</li>
+        <li><a href="services.html#services.worker.DatabaseWorker.filter_results_ready">filter_results_ready (services.worker.DatabaseWorker attribute)</a>
+</li>
         <li><a href="services.html#services.link_resolver.LinkResolver.find_broken_links">find_broken_links() (services.link_resolver.LinkResolver method)</a>
 </li>
         <li><a href="core.html#core.calendar.CalendarConverter.format_date">format_date() (core.calendar.CalendarConverter method)</a>
@@ -765,6 +771,8 @@
         <li><a href="core.html#core.calendar.CalendarConfig.get_months_for_year">get_months_for_year() (core.calendar.CalendarConfig method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_name">get_name() (services.db_service.DatabaseService method)</a>
+</li>
+        <li><a href="services.html#services.db_service.DatabaseService.get_objects_by_ids">get_objects_by_ids() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.get_relation">get_relation() (services.db_service.DatabaseService method)</a>
 </li>
