deploy: 7f2471551fdc45a7d2da9029e581305745516717

--- a/genindex.html
+++ b/genindex.html
@@ -308,8 +308,6 @@
 </li>
           <li><a href="core.html#core.calendar.CalendarConverter.__init__">(core.calendar.CalendarConverter method)</a>
 </li>
-          <li><a href="core.html#core.theme_manager.ThemeManager.__init__">(core.theme_manager.ThemeManager method)</a>
-</li>
           <li><a href="services.html#services.db_service.DatabaseService.__init__">(services.db_service.DatabaseService method)</a>
 </li>
           <li><a href="services.html#services.link_resolver.LinkResolver.__init__">(services.link_resolver.LinkResolver method)</a>
@@ -319,8 +317,6 @@
         </ul></li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="core.html#core.theme_manager.ThemeManager.__new__">__new__() (core.theme_manager.ThemeManager static method)</a>
-</li>
         <li><a href="core.html#core.calendar.CalendarDate.__str__">__str__() (core.calendar.CalendarDate method)</a>
 </li>
     </ul></td>
@@ -352,8 +348,6 @@
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.worker.DatabaseWorker.apply_filter">apply_filter() (services.worker.DatabaseWorker method)</a>
-</li>
-        <li><a href="core.html#core.theme_manager.ThemeManager.apply_theme">apply_theme() (core.theme_manager.ThemeManager method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.assign_tag_to_entity">assign_tag_to_entity() (services.db_service.DatabaseService method)</a>
 </li>
@@ -456,6 +450,8 @@
           <li><a href="commands.html#module-commands.longform_commands">module</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     commands.relation_commands
 
@@ -463,8 +459,6 @@
           <li><a href="commands.html#module-commands.relation_commands">module</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     commands.wiki_commands
 
@@ -507,13 +501,6 @@
 
         <ul>
           <li><a href="core.html#module-core.logging_config">module</a>
-</li>
-        </ul></li>
-        <li>
-    core.theme_manager
-
-        <ul>
-          <li><a href="core.html#module-core.theme_manager">module</a>
 </li>
         </ul></li>
         <li><a href="core.html#core.calendar.CalendarConfig.create_default">create_default() (core.calendar.CalendarConfig class method)</a>
@@ -969,8 +956,6 @@
 </li>
           <li><a href="core.html#module-core.logging_config">core.logging_config</a>
 </li>
-          <li><a href="core.html#module-core.theme_manager">core.theme_manager</a>
-</li>
           <li><a href="gui.html#module-gui">gui</a>
 </li>
           <li><a href="gui.dialogs.html#module-gui.dialogs">gui.dialogs</a>
@@ -1133,6 +1118,8 @@
           <li><a href="services.html#module-services.text_parser">module</a>
 </li>
         </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
         <li>
     services.worker
 
@@ -1140,15 +1127,11 @@
           <li><a href="services.html#module-services.worker">module</a>
 </li>
         </ul></li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="services.html#services.db_service.DatabaseService.set_active_calendar_config">set_active_calendar_config() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.set_current_time">set_current_time() (services.db_service.DatabaseService method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.set_tag_color">set_tag_color() (services.db_service.DatabaseService method)</a>
-</li>
-        <li><a href="core.html#core.theme_manager.ThemeManager.set_theme">set_theme() (core.theme_manager.ThemeManager method)</a>
 </li>
         <li><a href="services.html#services.db_service.DatabaseService.set_timeline_grouping_config">set_timeline_grouping_config() (services.db_service.DatabaseService method)</a>
 </li>
@@ -1158,12 +1141,8 @@
 </li>
         <li><a href="services.html#id4">span (services.text_parser.LinkCandidate attribute)</a>, <a href="services.html#services.text_parser.LinkCandidate.span">[1]</a>
 </li>
-        <li><a href="core.html#core.theme_manager.ThemeManager.staticMetaObject">staticMetaObject (core.theme_manager.ThemeManager attribute)</a>
-
-        <ul>
-          <li><a href="services.html#services.worker.DatabaseWorker.staticMetaObject">(services.worker.DatabaseWorker attribute)</a>
+        <li><a href="services.html#services.worker.DatabaseWorker.staticMetaObject">staticMetaObject (services.worker.DatabaseWorker attribute)</a>
 </li>
-        </ul></li>
         <li><a href="commands.html#commands.base_command.CommandResult.success">success (commands.base_command.CommandResult attribute)</a>, <a href="commands.html#id3">[1]</a>
 </li>
     </ul></td>
@@ -1181,10 +1160,6 @@
 </li>
         </ul></li>
         <li><a href="services.html#id5">target_id (services.text_parser.LinkCandidate attribute)</a>, <a href="services.html#services.text_parser.LinkCandidate.target_id">[1]</a>
-</li>
-        <li><a href="core.html#core.theme_manager.ThemeManager.theme_changed">theme_changed (core.theme_manager.ThemeManager attribute)</a>
-</li>
-        <li><a href="core.html#core.theme_manager.ThemeManager">ThemeManager (class in core.theme_manager)</a>
 </li>
         <li><a href="core.html#core.calendar.CalendarDate.time_fraction">time_fraction (core.calendar.CalendarDate attribute)</a>, <a href="core.html#id12">[1]</a>
 </li>
